tests/errors/array_07.f90
program array_07
implicit none

integer :: a(5)
a = []

end program
